--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #302432;
+  font-size: 5vw;
   margin: 0;
   padding: 0;
 }
@@ -56,6 +57,7 @@ body {
   grid-area: 1/1/2/2;
   background-color: #c8e17c;
   background-image: url(images/backgroundblanc.png);
+  font-family: "Lobster", cursive;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -91,6 +93,7 @@ body {
 #s-titre {
   grid-area: 1/1/2/2;
   background-color: #f68091;
+  font-family: "Lobster", cursive;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -153,8 +156,11 @@ body {
 }
 
 footer {
-  background-image: url(images/background.png);
+  /* background-image: url(images/background.png);*/
+  width: auto;
+  height: 15em;
   background-size: cover;
+  background-color: #bfffe7;
 }
 
 #p-footer {
@@ -167,8 +173,8 @@ footer {
   list-style-type: none;
   display: flex;
   justify-content: center;
-  padding: 0.5em 0.5em 2em 0.5em;
-  fill: #09c47c;
+  padding: 0em 0.5em 2em 0.5em;
+  fill: blue;
 }
 
 #insta {
@@ -179,22 +185,22 @@ footer {
   padding-left: 1em;
 }
 
-#facebook:hover {
-  fill: rgb(34, 34, 34);
-  cursor: pointer;
-}
-
-#insta:hover {
-  fill: rgb(34, 34, 34);
-  cursor: pointer;
-}
-
-#twitter:hover {
-  fill: rgb(34, 34, 34);
-  cursor: pointer;
-}
-
 /*
+#facebook:hover{
+    fill:rgb(255, 255, 255);
+    cursor:pointer;
+}
+
+#insta:hover{
+    fill:rgb(255, 255, 255);
+    cursor:pointer;
+}
+
+#twitter:hover{
+    fill:rgb(255, 255, 255);
+    cursor:pointer;
+}
+
 @media (prefers-color-scheme: dark) {
 
 body{
