--- a/assets/style.scss
+++ b/assets/style.scss
@@ -38,7 +38,7 @@ body{
         }
     }
 
-    #p-header{
+    #h1-header{
         text-align: center;
         font-size: 60px;
         padding: 10vh 0vw 10vh;
