--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,6 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #302432;
-  font-size: 5vw;
   margin: 0;
   padding: 0;
 }
@@ -57,7 +56,6 @@ body {
   grid-area: 1/1/2/2;
   background-color: #c8e17c;
   background-image: url(images/backgroundblanc.png);
-  font-family: "Lobster", cursive;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -93,7 +91,6 @@ body {
 #s-titre {
   grid-area: 1/1/2/2;
   background-color: #f68091;
-  font-family: "Lobster", cursive;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -160,7 +157,7 @@ footer {
   width: auto;
   height: 15em;
   background-size: cover;
-  background-color: #bfffe7;
+  background-color: rgb(72, 135, 177);
 }
 
 #p-footer {
@@ -174,7 +171,7 @@ footer {
   display: flex;
   justify-content: center;
   padding: 0em 0.5em 2em 0.5em;
-  fill: blue;
+  fill: rgb(29, 56, 73);
 }
 
 #insta {
@@ -185,30 +182,46 @@ footer {
   padding-left: 1em;
 }
 
-/*
-#facebook:hover{
-    fill:rgb(255, 255, 255);
-    cursor:pointer;
-}
-
-#insta:hover{
-    fill:rgb(255, 255, 255);
-    cursor:pointer;
-}
-
-#twitter:hover{
-    fill:rgb(255, 255, 255);
-    cursor:pointer;
-}
-
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
 
 body{
     background-color:#302432  ;
     color: white;
 }
-footer{
-        background-image: url(images/backgroundfondnoir.png);
-        background-size: cover;
-}
-}*//*# sourceMappingURL=style.css.map */
+
+}*/
+@media screen and (min-width: 1023px) {
+  #cartes {
+    height: 25em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  #carte-végé {
+    height: 25em;
+    grid-area: 2/1/3/2;
+    background-size: cover;
+  }
+  #carte-sucré {
+    height: 25em;
+    background-size: cover;
+    grid-area: 2/2/3/3;
+  }
+  #carte-bouffé {
+    height: 25em;
+    background-size: cover;
+    grid-area: 2/3/3/4;
+  }
+  #facebook:hover {
+    fill: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+  #insta:hover {
+    fill: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+  #twitter:hover {
+    fill: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+}/*# sourceMappingURL=style.css.map */
