--- a/assets/style.scss
+++ b/assets/style.scss
@@ -2,7 +2,6 @@
 body{
     font-family: 'Roboto', sans-serif;
     color:#302432 ;
-    font-size: 5vw;
     margin:0;
     padding:0;
 }
@@ -61,9 +60,8 @@ body{
 
  #v-titre{
     grid-area: 1 / 1 / 2 / 2; 
-    background-color:#c8e17c;
+    background-color: #c8e17c;
     background-image: url(images/backgroundblanc.png);
-    font-family: 'Lobster', cursive;
     background-size:cover;
     background-repeat: no-repeat;
  }
@@ -101,7 +99,6 @@ body{
  #s-titre{
     grid-area: 1 / 1 / 2 / 2; 
     background-color:#f68091;
-    font-family: 'Lobster', cursive;
     background-image: url(images/backgroundblanc.png);
     background-size:cover;
     background-repeat: no-repeat;
@@ -166,12 +163,13 @@ body{
  }
 
 //--------------------------------------------------------------FOOTER-------------------------------------------------------------------------------//
+
 footer{
    /* background-image: url(images/background.png);*/
-   width: auto;
-   height: 15em;
+    width: auto;
+    height: 15em;
     background-size: cover;
-    background-color: #bfffe7;
+    background-color: rgb(72, 135, 177);
 }
 
 #p-footer{
@@ -185,7 +183,7 @@ footer{
     display: flex;
     justify-content: center;
     padding: 0em 0.5em 2em 0.5em;
-    fill: blue;
+    fill: rgb(29, 56, 73);
 }
 
 #insta{
@@ -196,8 +194,47 @@ footer{
     padding-left: 1em;
 }
 
+
+
+/*@media (prefers-color-scheme: dark) {
+
+body{
+    background-color:#302432  ;
+    color: white;
+}
+
+}*/
+
+@media screen and (min-width: 1023px) {
+
+#cartes{
+    height:25em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr); 
+}
+        
+    #carte-végé{ 
+    height:25em;
+    grid-area: 2 / 1 / 3 / 2; 
+    background-size: cover;
+}
+                    
+    #carte-sucré{ 
+    height:25em;
+    background-size: cover;
+    grid-area: 2 / 2 / 3 / 3; 
+}
+        
+    #carte-bouffé{ 
+    height:25em;   
+    background-size: cover;
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+
 //-----------------------------ANIMATION FOOTER POUR MEDIA QUERIES---------------------------------------------//
-/*
+
 #facebook:hover{
     fill:rgb(255, 255, 255);
     cursor:pointer;
@@ -212,15 +249,4 @@ footer{
     fill:rgb(255, 255, 255);
     cursor:pointer;
 }
-
-@media (prefers-color-scheme: dark) {
-
-body{
-    background-color:#302432  ;
-    color: white;
 }
-footer{
-        background-image: url(images/backgroundfondnoir.png);
-        background-size: cover;
-}
-}*/
