--- a/assets/style.css
+++ b/assets/style.css
@@ -192,23 +192,23 @@ body{
 }*/
 @media screen and (min-width: 1023px) {
   #cartes {
-    height: 25em;
+    height: 30em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
   #carte-végé {
-    height: 25em;
+    height: 30em;
     grid-area: 2/1/3/2;
     background-size: cover;
   }
   #carte-sucré {
-    height: 25em;
+    height: 30em;
     background-size: cover;
     grid-area: 2/2/3/3;
   }
   #carte-bouffé {
-    height: 25em;
+    height: 30em;
     background-size: cover;
     grid-area: 2/3/3/4;
   }
@@ -224,4 +224,12 @@ body{
     fill: rgb(255, 255, 255);
     cursor: pointer;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+/*@media (prefers-color-scheme: dark) {
+
+body{
+    background-color:#302432  ;
+    color: white;
+}
+
+}*//*# sourceMappingURL=style.css.map */
