--- a/assets/style.scss
+++ b/assets/style.scss
@@ -205,29 +205,31 @@ body{
 
 }*/
 
+//--------------------------------------------------------------MEDIA QUERIES-------------------------------------------------------------------------------//
+
 @media screen and (min-width: 1023px) {
 
 #cartes{
-    height:25em;
+    height:30em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr); 
 }
         
     #carte-végé{ 
-    height:25em;
+    height:30em;
     grid-area: 2 / 1 / 3 / 2; 
     background-size: cover;
 }
                     
     #carte-sucré{ 
-    height:25em;
+    height:30em;
     background-size: cover;
     grid-area: 2 / 2 / 3 / 3; 
 }
         
     #carte-bouffé{ 
-    height:25em;   
+    height:30em;   
     background-size: cover;
     grid-area: 2 / 3 / 3 / 4;
 }
@@ -250,3 +252,14 @@ body{
     cursor:pointer;
 }
 }
+
+//--------------------------------------------------------------DARK MODE-------------------------------------------------------------------------------//
+
+/*@media (prefers-color-scheme: dark) {
+
+body{
+    background-color:#302432  ;
+    color: white;
+}
+
+}*/
