--- a/assets/style.css
+++ b/assets/style.css
@@ -171,7 +171,7 @@ footer {
   display: flex;
   justify-content: center;
   padding: 0em 0.5em 2em 0.5em;
-  fill: rgb(29, 56, 73);
+  fill: #302432;
 }
 
 #insta {
@@ -182,14 +182,6 @@ footer {
   padding-left: 1em;
 }
 
-/*@media (prefers-color-scheme: dark) {
-
-body{
-    background-color:#302432  ;
-    color: white;
-}
-
-}*/
 @media screen and (min-width: 1023px) {
   #cartes {
     height: 30em;
@@ -224,12 +216,26 @@ body{
     fill: rgb(255, 255, 255);
     cursor: pointer;
   }
+  footer {
+    height: 20em;
+  }
+  #insta {
+    padding-left: 5em;
+  }
+  #twitter {
+    padding-left: 5em;
+  }
+  #p-footer {
+    color: #302432;
+    font-size: 1.5em;
+  }
 }
-/*@media (prefers-color-scheme: dark) {
-
-body{
-    background-color:#302432  ;
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #302432;
     color: white;
-}
-
-}*//*# sourceMappingURL=style.css.map */
+  }
+  #box-header {
+    background-image: url(images/backgrounddarkmode.png);
+  }
+}/*# sourceMappingURL=style.css.map */
