--- a/assets/style.css
+++ b/assets/style.css
@@ -34,30 +34,49 @@ body {
   justify-content: flex-end;
   margin: 2%;
 }
-#box-header #p-header {
+#box-header #h1-header {
   text-align: center;
-  font-size: 60px;
+  font-size: 230%;
   padding: 10vh 0vw 10vh;
 }
 
-#description {
+#p-description {
   text-align: center;
   margin: 2%;
+  color: #302432;
+  font-size: 100%;
+  line-height: 150%;
+  letter-spacing: 50%;
 }
 
 #carte-végé {
-  width: auto;
-  height: 23em;
+  width: 100%;
+  height: 51%;
   display: grid;
   margin-bottom: 2em;
 }
 
 #v-titre {
+  position: absolute;
+  width: 50%;
+  height: 25.5%;
+  z-index: 1;
   grid-area: 1/1/2/2;
   background-color: #c8e17c;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.végé-txt {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  font-family: "Nerko One", cursive;
+  font-size: 350%;
+  text-transform: uppercase;
+  margin-left: 27%;
+  margin-top: 9%;
 }
 
 #v-plat-1 {
@@ -82,18 +101,35 @@ body {
 }
 
 #carte-sucré {
-  width: auto;
-  height: 23em;
+  width: 100%;
+  height: 51%;
   display: grid;
   margin-bottom: 2em;
 }
 
 #s-titre {
+  position: absolute;
+  width: 50%;
+  height: 25.5%;
+  z-index: 1;
   grid-area: 1/1/2/2;
   background-color: #f68091;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
   background-repeat: no-repeat;
+  color: white;
+  font-family: "Nerko One", cursive;
+}
+
+.sucré-txt {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  font-family: "Nerko One", cursive;
+  font-size: 350%;
+  text-transform: uppercase;
+  margin-left: 20%;
+  margin-top: 9%;
 }
 
 #s-plat-1 {
@@ -118,17 +154,34 @@ body {
 }
 
 #carte-bouffé {
-  width: auto;
-  height: 23em;
+  width: 100%;
+  height: 51%;
   display: grid;
 }
 
 #b-titre {
+  position: absolute;
+  width: 50%;
+  height: 25.5%;
+  z-index: 1;
   grid-area: 1/1/2/2;
   background-color: #fb7539;
   background-image: url(images/backgroundblanc.png);
   background-size: cover;
   background-repeat: no-repeat;
+  color: white;
+  font-family: "Nerko One", cursive;
+}
+
+.bouffé-txt {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  font-family: "Nerko One", cursive;
+  font-size: 350%;
+  text-transform: uppercase;
+  margin-left: 17%;
+  margin-top: 9%;
 }
 
 #b-plat-1 {
