--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,7 @@ body {
 #box-header #h1-header {
   text-align: center;
   font-size: 230%;
+  font-family: "Nerko One", cursive;
   padding: 10vh 0vw 10vh;
 }
 
@@ -76,7 +77,7 @@ body {
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 27%;
-  margin-top: 9%;
+  margin-top: 30%;
 }
 
 #v-plat-1 {
@@ -129,7 +130,7 @@ body {
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 20%;
-  margin-top: 9%;
+  margin-top: 30%;
 }
 
 #s-plat-1 {
@@ -180,8 +181,8 @@ body {
   font-family: "Nerko One", cursive;
   font-size: 350%;
   text-transform: uppercase;
-  margin-left: 17%;
-  margin-top: 9%;
+  margin-left: 16%;
+  margin-top: 30%;
 }
 
 #b-plat-1 {
@@ -257,6 +258,30 @@ footer {
     background-size: cover;
     grid-area: 2/3/3/4;
   }
+  #s-titre {
+    position: absolute;
+    width: 16.8%;
+    height: 15em;
+  }
+  #v-titre {
+    position: absolute;
+    width: 16.8%;
+    height: 15em;
+  }
+  #b-titre {
+    position: absolute;
+    width: 16.8%;
+    height: 15em;
+  }
+  .sucré-txt {
+    margin-top: 35%;
+  }
+  .végé-txt {
+    margin-top: 35%;
+  }
+  .-txt {
+    margin-top: 35%;
+  }
   #facebook:hover {
     fill: rgb(255, 255, 255);
     cursor: pointer;
@@ -289,5 +314,8 @@ footer {
   }
   #box-header {
     background-image: url(images/backgrounddarkmode.png);
+  }
+  #p-description {
+    color: white;
   }
 }/*# sourceMappingURL=style.css.map */
