--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,3 +1,9 @@
+@import './scss/_mixins';
+// pour importer un élément: @include absolute-el()
+@import './scss/_placeholders'; 
+// pour importer un élément: @extend %lenomdetonplaceholder
+@import './scss/_variables';
+// pour importer un élément: $exemplecouleur
 
 body{
     font-family: 'Roboto', sans-serif;
@@ -41,9 +47,9 @@ body{
 
 #h1-header{
     text-align: center;
-    font-size: 230%;
+    font-size: 250%;
     font-family: 'Nerko One', cursive;
-    padding: 10vh 0vw 10vh;
+    padding: 10vh 0vw 0vh;
     }
 }
 
@@ -219,7 +225,6 @@ body{
 //--------------------------------------------------------------FOOTER-------------------------------------------------------------------------------//
 
 footer{
-   /* background-image: url(images/background.png);*/
     width: auto;
     height: 15em;
     background-size: cover;
@@ -241,16 +246,23 @@ footer{
 }
 
 #insta{
-    padding-left: 1em;
+    padding-left: 2em;
 }
 
 #twitter{
-    padding-left: 1em;
+    padding-left: 2em;
 }
 
 //--------------------------------------------------------------MEDIA QUERIES-------------------------------------------------------------------------------//
 
 @media screen and (min-width: 1023px) {
+
+@import './scss/_mixins';
+// pour importer un élément: @include absolute-el()
+@import './scss/_placeholders'; 
+// pour importer un élément: @extend %lenomdetonplaceholder
+@import './scss/_variables';
+// pour importer un élément: $exemplecouleur
 
 #cartes{
     height:30em;
