--- a/assets/style.scss
+++ b/assets/style.scss
@@ -18,6 +18,7 @@ body{
     #box-header-top{
         display: flex;
         justify-content: space-between;
+    
         #logo-header{
             height: 45px;
             width: 45px;
@@ -25,16 +26,16 @@ body{
             background-color: black;
             display: flex;
             justify-content: flex-start;
-            margin: 2%;
+            margin: 8%;
         }
+
         #panier-header{
-            height: 45px;
-            width: 45px;
-            border-radius: 50%;
-            background-color: black;
+            width: 30px;
+            height: 30px;
+            fill: #09c47c;
             display: flex;
             justify-content: flex-end;
-            margin: 2%;
+            margin: 10%;
         }
     }
 
@@ -43,15 +44,63 @@ body{
         font-size: 230%;
         padding: 10vh 0vw 10vh;
     }
-}
-
-#p-description{
+    
+    #p-description{
     text-align: center;
-    margin: 2%;
-    color:#302432;
+    margin: 7%;
     font-size: 100%;
     line-height: 150%;
     letter-spacing: 50%;
+
+        .p1-gras {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+        }
+        .p1-c {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color:#fb7539;
+        }
+        .p1-o {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color: #c8e17c;
+        }
+        .p1-l {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color:#f68091;
+        }
+        .p1-o2 {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color:#c8e17c;
+        }
+        .p1-r {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color: #fb7539;
+        }
+        .p1-é {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color: #c8e17c;
+        }
+        .p3-simple {
+            font-family: 'Nerko One', cursive;
+            font-size: 200%;
+        }
+        .p3-gras {
+            font-family: 'Nerko One', cursive;
+            font-size: 200%;
+            color:#f68091;
+        }
+        .p3-excl {
+            font-family: 'Nerko One', cursive;
+            font-size: 200%;
+        }
+    }
+
 }
 
 //--------------------------------------------------------------MAIN-------------------------------------------------------------------------------//
@@ -222,6 +271,7 @@ footer{
 
 #p-footer{
     text-align: center;
+    font-weight: bolder;
     padding-top: 3em;
     padding-bottom: 1.5em;
 }
