--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+/*@import './scss/_mixins';
+// pour importer un élément: @include absolute-el()
+@import './scss/_placeholders'; 
+// pour importer un élément: @extend %lenomdetonplaceholder
+@import './scss/_variables';
+// pour importer un élément: $exemplecouleur */
 body {
   font-family: "Roboto", sans-serif;
   color: #302432;
@@ -36,6 +42,7 @@ body {
 #box-header #h1-header {
   text-align: center;
   font-size: 230%;
+  font-family: "Nerko One", cursive;
   padding: 10vh 0vw 10vh;
 }
 #box-header #p-description {
@@ -120,7 +127,7 @@ body {
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 27%;
-  margin-top: 9%;
+  margin-top: 30%;
 }
 
 #v-plat-1 {
@@ -173,7 +180,7 @@ body {
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 20%;
-  margin-top: 9%;
+  margin-top: 30%;
 }
 
 #s-plat-1 {
@@ -224,8 +231,8 @@ body {
   font-family: "Nerko One", cursive;
   font-size: 350%;
   text-transform: uppercase;
-  margin-left: 17%;
-  margin-top: 9%;
+  margin-left: 16%;
+  margin-top: 30%;
 }
 
 #b-plat-1 {
@@ -250,8 +257,10 @@ body {
 }
 
 footer {
-  background-image: url(images/background.png);
+  width: auto;
+  height: 15em;
   background-size: cover;
+  background-color: rgb(72, 135, 177);
 }
 
 #p-footer {
@@ -270,37 +279,99 @@ footer {
 }
 
 #insta {
-  padding-left: 1em;
+  padding-left: 2em;
 }
 
 #twitter {
-  padding-left: 1em;
+  padding-left: 2em;
 }
 
-#facebook:hover {
-  fill: rgb(34, 34, 34);
-  cursor: pointer;
+@media screen and (min-width: 1023px) {
+  /* @import './scss/_mixins';
+   // pour importer un élément: @include absolute-el()
+   @import './scss/_placeholders'; 
+   // pour importer un élément: @extend %lenomdetonplaceholder
+   @import './scss/_variables';
+   // pour importer un élément: $exemplecouleur*/
+  #cartes {
+    height: 30em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  #carte-végé {
+    height: 30em;
+    grid-area: 2/1/3/2;
+    background-size: cover;
+  }
+  #carte-sucré {
+    height: 30em;
+    background-size: cover;
+    grid-area: 2/2/3/3;
+  }
+  #carte-bouffé {
+    height: 30em;
+    background-size: cover;
+    grid-area: 2/3/3/4;
+  }
+  #s-titre {
+    position: absolute;
+    width: 16.8%;
+    height: 15em;
+  }
+  #v-titre {
+    position: absolute;
+    width: 16.8%;
+    height: 15em;
+  }
+  #b-titre {
+    position: absolute;
+    width: 16.8%;
+    height: 15em;
+  }
+  .sucré-txt {
+    margin-top: 35%;
+  }
+  .végé-txt {
+    margin-top: 35%;
+  }
+  .-txt {
+    margin-top: 35%;
+  }
+  #facebook:hover {
+    fill: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+  #insta:hover {
+    fill: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+  #twitter:hover {
+    fill: rgb(255, 255, 255);
+    cursor: pointer;
+  }
+  footer {
+    height: 20em;
+  }
+  #insta {
+    padding-left: 5em;
+  }
+  #twitter {
+    padding-left: 5em;
+  }
+  #p-footer {
+    font-size: 1.5em;
+  }
 }
-
-#insta:hover {
-  fill: rgb(34, 34, 34);
-  cursor: pointer;
-}
-
-#twitter:hover {
-  fill: rgb(34, 34, 34);
-  cursor: pointer;
-}
-
-/*
 @media (prefers-color-scheme: dark) {
-
-body{
-    background-color:#302432  ;
+  body {
+    background-color: #302432;
     color: white;
-}
-footer{
-        background-image: url(images/backgroundfondnoir.png);
-        background-size: cover;
-}
-}*//*# sourceMappingURL=style.css.map */
+  }
+  #box-header {
+    background-image: url(images/backgrounddarkmode.png);
+  }
+  #p-description {
+    color: white;
+  }
+}/*# sourceMappingURL=style.css.map */
