--- a/assets/style.scss
+++ b/assets/style.scss
@@ -53,14 +53,62 @@ body{
     }
 }
 
+//--------------------------------------------------------------PERSONALISATION TEXT-------------------------------------------------------------------------------//
 #p-description{
     text-align: center;
-    margin: 2%;
-    color:#302432;
+    margin: 7%;
     font-size: 100%;
     line-height: 150%;
     letter-spacing: 50%;
-}
+
+        .p1-gras {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+        }
+        .p1-c {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color:#fb7539;
+        }
+        .p1-o {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color: #c8e17c;
+        }
+        .p1-l {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color:#f68091;
+        }
+        .p1-o2 {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color:#c8e17c;
+        }
+        .p1-r {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color: #fb7539;
+        }
+        .p1-é {
+            font-family: 'Nerko One', cursive;
+            font-size: 150%;
+            color: #c8e17c;
+        }
+        .p3-simple {
+            font-family: 'Nerko One', cursive;
+            font-size: 200%;
+        }
+        .p3-gras {
+            font-family: 'Nerko One', cursive;
+            font-size: 200%;
+            color:#f68091;
+        }
+        .p3-excl {
+            font-family: 'Nerko One', cursive;
+            font-size: 200%;
+        }
+    }
 
 //--------------------------------------------------------------MAIN-------------------------------------------------------------------------------//
 
