--- a/assets/style.scss
+++ b/assets/style.scss
@@ -3,7 +3,7 @@
 @import './scss/_placeholders'; 
 // pour importer un élément: @extend %lenomdetonplaceholder
 @import './scss/_variables';
-// pour importer un élément: $exemplecouleur */
+// pour importer un élément: $exemplecouleur*/
 
 body{
     font-family: 'Roboto', sans-serif;
@@ -20,38 +20,41 @@ body{
     display: flex;
     flex-direction: column;
     
-    #box-header-top{
-        display: flex;
-        justify-content: space-between;
-    
-        #logo-header{
-            height: 45px;
-            width: 45px;
-            border-radius: 50%;
-            background-color: black;
-            display: flex;
-            justify-content: flex-start;
-            margin: 8%;
-        }
+#box-header-top{
+    display: flex;
+    justify-content: space-between;
 
-        #panier-header{
-            width: 30px;
-            height: 30px;
-            fill: #09c47c;
-            display: flex;
-            justify-content: flex-end;
-            margin: 10%;
-        }
-    }
+#logo-header{
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    background-color: black;
+    display: flex;
+    justify-content: flex-start;
+    margin: 2%;
+}
 
-    #h1-header{
-        text-align: center;
-        font-size: 230%;
-        font-family: 'Nerko One', cursive;
-        padding: 10vh 0vw 10vh;
+#panier-header{
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    background-color: black;
+    display: flex;
+    justify-content: flex-end;
+    margin: 2%;
+}
+}
+
+#h1-header{
+    text-align: center;
+    font-size: 250%;
+    font-family: 'Nerko One', cursive;
+    padding: 10vh 0vw 0vh;
     }
-    
-    #p-description{
+}
+
+//--------------------------------------------------------------PERSONALISATION TEXT-------------------------------------------------------------------------------//
+#p-description{
     text-align: center;
     margin: 7%;
     font-size: 100%;
@@ -107,8 +110,6 @@ body{
         }
     }
 
-}
-
 //--------------------------------------------------------------MAIN-------------------------------------------------------------------------------//
 
 #carte-végé{
@@ -124,7 +125,7 @@ body{
     height: 25.5%;
     z-index: 1;
     grid-area: 1 / 1 / 2 / 2; 
-    background-color:#c8e17c;
+    background-color: #c8e17c;
     background-image: url(images/backgroundblanc.png);
     background-size:cover;
     background-repeat: no-repeat;
@@ -137,7 +138,7 @@ body{
     font-family: 'Nerko One', cursive;
     font-size: 350%;
     text-transform: uppercase;
-    margin-left: 27%;
+    margin-left: 27% ;
     margin-top: 30%;
     }
 
@@ -161,7 +162,7 @@ body{
     background-size:cover;
     background-repeat: no-repeat;
  }
- 
+
 //---------------------------------------------------------//
 
 #carte-sucré{
@@ -270,6 +271,7 @@ body{
  }
 
 //--------------------------------------------------------------FOOTER-------------------------------------------------------------------------------//
+
 footer{
     width: auto;
     height: 15em;
@@ -279,7 +281,6 @@ footer{
 
 #p-footer{
     text-align: center;
-    font-weight: bolder;
     padding-top: 3em;
     padding-bottom: 1.5em;
 }
@@ -288,8 +289,8 @@ footer{
     list-style-type: none;  
     display: flex;
     justify-content: center;
-    padding: 0.5em 0.5em 2em 0.5em;
-    fill: #09c47c;
+    padding: 0em 0.5em 2em 0.5em;
+    fill: #302432;
 }
 
 #insta{
@@ -304,116 +305,116 @@ footer{
 
 @media screen and (min-width: 1023px) {
 
-   /* @import './scss/_mixins';
-    // pour importer un élément: @include absolute-el()
-    @import './scss/_placeholders'; 
-    // pour importer un élément: @extend %lenomdetonplaceholder
-    @import './scss/_variables';
-    // pour importer un élément: $exemplecouleur*/
-    
-    #cartes{
-        height:30em;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr); 
-    }
-            
-        #carte-végé{ 
-        height:30em;
-        grid-area: 2 / 1 / 3 / 2; 
-        background-size: cover;
-    }
-                        
-        #carte-sucré{ 
-        height:30em;
-        background-size: cover;
-        grid-area: 2 / 2 / 3 / 3; 
-    }
-            
-        #carte-bouffé{ 
-        height:30em;   
-        background-size: cover;
-        grid-area: 2 / 3 / 3 / 4;
-    }
-    
-    #s-titre{
-        position:absolute;
-        width: 16.8%;
-        height: 15em;
-    }
-    
-    #v-titre{
-        position:absolute;
-        width: 16.8%;
-        height: 15em;
-    }
-    
-    #b-titre{
-        position:absolute;
-        width: 16.8%;
-        height: 15em;
-    }
-    
-    .sucré-txt {
-        margin-top: 35%;
-    }
-    
-    .végé-txt {
-        margin-top: 35%;
-    }
-    
-    .-txt {
-        margin-top: 35%;
-    }
-    
-    //-----------------------------ANIMATION FOOTER POUR MEDIA QUERIES---------------------------------------------//
-    
-    #facebook:hover{
-        fill:rgb(255, 255, 255);
-        cursor:pointer;
-    }
-    
-    #insta:hover{
-        fill:rgb(255, 255, 255);
-        cursor:pointer;
-    }
-    
-    #twitter:hover{
-        fill:rgb(255, 255, 255);
-        cursor:pointer;
-    }
-    
-    footer{
-        height: 20em;
-    }
-    #insta{
-        padding-left: 5em;
-    }
-    
-    #twitter{
-        padding-left: 5em;
-    }
-    
-    #p-footer{
-        font-size: 1.5em;
-    }
-    
-    }
-    
-    //--------------------------------------------------------------DARK MODE-------------------------------------------------------------------------------//
-    
-    @media (prefers-color-scheme: dark) {
-    
-    body{
-        background-color:#302432  ;
+/*@import './scss/_mixins';
+// pour importer un élément: @include absolute-el()
+@import './scss/_placeholders'; 
+// pour importer un élément: @extend %lenomdetonplaceholder
+@import './scss/_variables';
+// pour importer un élément: $exemplecouleur*/
+
+#cartes{
+    height:30em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr); 
+}
         
-        color: white;
-    }
+    #carte-végé{ 
+    height:30em;
+    grid-area: 2 / 1 / 3 / 2; 
+    background-size: cover;
+}
+                    
+    #carte-sucré{ 
+    height:30em;
+    background-size: cover;
+    grid-area: 2 / 2 / 3 / 3; 
+}
+        
+    #carte-bouffé{ 
+    height:30em;   
+    background-size: cover;
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+#s-titre{
+    position:absolute;
+    width: 16.8%;
+    height: 15em;
+}
+
+#v-titre{
+    position:absolute;
+    width: 16.8%;
+    height: 15em;
+}
+
+#b-titre{
+    position:absolute;
+    width: 16.8%;
+    height: 15em;
+}
+
+.sucré-txt {
+    margin-top: 35%;
+}
+
+.végé-txt {
+    margin-top: 35%;
+}
+
+.-txt {
+    margin-top: 35%;
+}
+
+//-----------------------------ANIMATION FOOTER POUR MEDIA QUERIES---------------------------------------------//
+
+#facebook:hover{
+    fill:rgb(255, 255, 255);
+    cursor:pointer;
+}
+
+#insta:hover{
+    fill:rgb(255, 255, 255);
+    cursor:pointer;
+}
+
+#twitter:hover{
+    fill:rgb(255, 255, 255);
+    cursor:pointer;
+}
+
+footer{
+    height: 20em;
+}
+#insta{
+    padding-left: 5em;
+}
+
+#twitter{
+    padding-left: 5em;
+}
+
+#p-footer{
+    font-size: 1.5em;
+}
+
+}
+
+//--------------------------------------------------------------DARK MODE-------------------------------------------------------------------------------//
+
+@media (prefers-color-scheme: dark) {
+
+body{
+    background-color:#302432  ;
     
-    #box-header{
-        background-image: url(images/backgrounddarkmode.png);
-    }
-    #p-description{
-        color: white;
-    }
-    }
+    color: white;
+}
+
+#box-header{
+    background-image: url(images/backgrounddarkmode.png);
+}
+#p-description{
+    color: white;
+}
+}
