--- a/assets/style.css
+++ b/assets/style.css
@@ -122,8 +122,8 @@ body {
   font-family: "Nerko One", cursive;
   font-size: 350%;
   text-transform: uppercase;
-  margin-left: 27%;
-  margin-top: 30%;
+  margin-left: 1.2em;
+  margin-top: 0.8em;
 }
 
 #v-plat-1 {
@@ -176,7 +176,7 @@ body {
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 20%;
-  margin-top: 30%;
+  margin-top: 0.8em;
 }
 
 #s-plat-1 {
@@ -228,7 +228,7 @@ body {
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 16%;
-  margin-top: 30%;
+  margin-top: 0.8em;
 }
 
 #b-plat-1 {
