--- a/assets/style.scss
+++ b/assets/style.scss
@@ -138,8 +138,8 @@ body{
     font-family: 'Nerko One', cursive;
     font-size: 350%;
     text-transform: uppercase;
-    margin-left: 27% ;
-    margin-top: 30%;
+    margin-left: 1.2em;
+    margin-top: 0.8em;
     }
 
  #v-plat-1{
@@ -193,7 +193,7 @@ body{
     font-size: 350%;
     text-transform: uppercase;
     margin-left: 20%;
-    margin-top: 30%;
+    margin-top: 0.8em;
     }
 
  #s-plat-1{
@@ -246,7 +246,7 @@ body{
     font-size: 350%;
     text-transform: uppercase;
     margin-left: 16%;
-    margin-top: 30%;
+    margin-top: 0.8em;
     }
 
  #b-plat-1{
