--- a/assets/style.scss
+++ b/assets/style.scss
@@ -35,10 +35,10 @@ body{
 }
 
 #panier-header{
-    height: 45px;
-    width: 45px;
+    height: 2.5em;
+    width: 2.5em;
     border-radius: 50%;
-    background-color: black;
+    fill: rgb(72, 135, 177);
     display: flex;
     justify-content: flex-end;
     margin: 2%;
