--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,7 @@ body {
 #p-description .p1-o {
   font-family: "Nerko One", cursive;
   font-size: 150%;
-  color: #c8e17c;
+  color: rgb(72, 135, 177);
 }
 #p-description .p1-l {
   font-family: "Nerko One", cursive;
@@ -70,7 +70,7 @@ body {
 #p-description .p1-o2 {
   font-family: "Nerko One", cursive;
   font-size: 150%;
-  color: #c8e17c;
+  color: rgb(72, 135, 177);
 }
 #p-description .p1-r {
   font-family: "Nerko One", cursive;
@@ -80,7 +80,7 @@ body {
 #p-description .p1-é {
   font-family: "Nerko One", cursive;
   font-size: 150%;
-  color: #c8e17c;
+  color: rgb(72, 135, 177);
 }
 #p-description .p3-simple {
   font-family: "Nerko One", cursive;
@@ -319,13 +319,14 @@ footer {
     height: 15em;
   }
   .sucré-txt {
-    margin-top: 35%;
+    margin-top: 37%;
   }
   .végé-txt {
-    margin-top: 35%;
+    margin-top: 37%;
+    margin-left: 25%;
   }
-  .-txt {
-    margin-top: 35%;
+  .bouffé-txt {
+    margin-top: 37%;
   }
   #facebook:hover {
     fill: rgb(255, 255, 255);
@@ -351,6 +352,10 @@ footer {
   #p-footer {
     font-size: 1.5em;
   }
+  #panier-header:hover {
+    cursor: pointer;
+    transform: translateY(-5px);
+  }
 }
 @media (prefers-color-scheme: dark) {
   body {
@@ -362,5 +367,35 @@ footer {
   }
   #p-description {
     color: white;
+  }
+  .p1-c {
+    font-family: "Nerko One", cursive;
+    font-size: 150%;
+    color: #fb7539;
+  }
+  .p1-o {
+    font-family: "Nerko One", cursive;
+    font-size: 150%;
+    color: #c8e17c;
+  }
+  .p1-l {
+    font-family: "Nerko One", cursive;
+    font-size: 150%;
+    color: #f68091;
+  }
+  .p1-o2 {
+    font-family: "Nerko One", cursive;
+    font-size: 150%;
+    color: #c8e17c;
+  }
+  .p1-r {
+    font-family: "Nerko One", cursive;
+    font-size: 150%;
+    color: #fb7539;
+  }
+  .p1-é {
+    font-family: "Nerko One", cursive;
+    font-size: 150%;
+    color: #c8e17c;
   }
 }/*# sourceMappingURL=style.css.map */
