--- a/assets/style.scss
+++ b/assets/style.scss
@@ -410,6 +410,7 @@ footer{
     font-size: 1.5em;
 }
 #panier-header:hover{
+    fill:rgb(255, 255, 255);
     cursor:pointer;
     transform: translateY(-5px);
 }
