--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,4 +1,9 @@
 //Pour importer : @import './_variables';//
 
 
+$taupe:#302432;
+$orange:#fb7539;
+$vert:#c8e17c;
+$rose: #f68091;
+$bleu:rgb(72, 135, 177);
 
