--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -17,3 +17,8 @@
         width:$width;
         height: $height;
 }
+
+@mixin font ($font-family, $font-size){
+        font-family:$font-family;
+        font-size:$font-size
+}
