--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,19 @@
 @charset "UTF-8";
+#b-plat-3, #b-plat-2, #b-plat-1, #b-titre, #s-plat-3, #s-plat-2, #s-plat-1, #s-titre, #v-plat-3, #v-plat-2, #v-plat-1, #v-titre {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#p-description .p1-é, #p-description .p1-r, #p-description .p1-o2, #p-description .p1-l, #p-description .p1-o, #p-description .p1-c, #p-description .p1-gras {
+  font-family: "Nerko One", cursive;
+  font-size: 150%;
+}
+
+#p-description .p3-excl, #p-description .p3-gras, #p-description .p3-simple {
+  font-family: "Nerko One", cursive;
+  font-size: 200%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #302432;
@@ -17,8 +32,8 @@ body {
   justify-content: space-between;
 }
 #box-header #box-header-top #logo-header {
-  height: 45px;
   width: 45px;
+  height: 45px;
   border-radius: 50%;
   background-color: black;
   display: flex;
@@ -26,8 +41,8 @@ body {
   margin: 2%;
 }
 #box-header #box-header-top #panier-header {
-  height: 2.5em;
   width: 2.5em;
+  height: 2.5em;
   border-radius: 50%;
   fill: rgb(72, 135, 177);
   display: flex;
@@ -36,8 +51,8 @@ body {
 }
 #box-header #h1-header {
   text-align: center;
+  font-family: "Nerko One";
   font-size: 250%;
-  font-family: "Nerko One", cursive;
   padding: 10vh 0vw 0vh;
 }
 
@@ -48,54 +63,27 @@ body {
   line-height: 150%;
   letter-spacing: 50%;
 }
-#p-description .p1-gras {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
-}
 #p-description .p1-c {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
   color: #fb7539;
 }
 #p-description .p1-o {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
   color: rgb(72, 135, 177);
 }
 #p-description .p1-l {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
   color: #f68091;
 }
 #p-description .p1-o2 {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
   color: rgb(72, 135, 177);
 }
 #p-description .p1-r {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
   color: #fb7539;
 }
 #p-description .p1-é {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
   color: rgb(72, 135, 177);
 }
-#p-description .p3-simple {
-  font-family: "Nerko One", cursive;
-  font-size: 200%;
-}
 #p-description .p3-gras {
-  font-family: "Nerko One", cursive;
-  font-size: 200%;
   color: #f68091;
 }
-#p-description .p3-excl {
-  font-family: "Nerko One", cursive;
-  font-size: 200%;
-}
-
 #carte-végé {
   width: 100%;
   height: 51%;
@@ -111,15 +99,13 @@ body {
   grid-area: 1/1/2/2;
   background-color: #c8e17c;
   background-image: url(images/backgroundblanc.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .végé-txt {
   position: absolute;
   z-index: 2;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: "Nerko One";
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 1.2em;
@@ -129,22 +115,16 @@ body {
 #v-plat-1 {
   grid-area: 1/2/2/3;
   background-image: url(images/VEGGIE01.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #v-plat-2 {
   grid-area: 2/1/3/2;
   background-image: url(images/VEGGIE02.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #v-plat-3 {
   grid-area: 2/2/3/3;
   background-image: url(images/VEGGIE03.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #carte-sucré {
@@ -162,8 +142,6 @@ body {
   grid-area: 1/1/2/2;
   background-color: #f68091;
   background-image: url(images/backgroundblanc.png);
-  background-size: cover;
-  background-repeat: no-repeat;
   color: white;
   font-family: "Nerko One", cursive;
 }
@@ -172,7 +150,7 @@ body {
   position: absolute;
   z-index: 2;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: "Nerko One";
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 20%;
@@ -182,22 +160,16 @@ body {
 #s-plat-1 {
   grid-area: 1/2/2/3;
   background-image: url(images/SUGAR01.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #s-plat-2 {
   grid-area: 2/1/3/2;
   background-image: url(images/SUGAR02.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #s-plat-3 {
   grid-area: 2/2/3/3;
   background-image: url(images/SUGAR03.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #carte-bouffé {
@@ -214,8 +186,6 @@ body {
   grid-area: 1/1/2/2;
   background-color: #fb7539;
   background-image: url(images/backgroundblanc.png);
-  background-size: cover;
-  background-repeat: no-repeat;
   color: white;
   font-family: "Nerko One", cursive;
 }
@@ -224,7 +194,7 @@ body {
   position: absolute;
   z-index: 2;
   color: white;
-  font-family: "Nerko One", cursive;
+  font-family: "Nerko One";
   font-size: 350%;
   text-transform: uppercase;
   margin-left: 16%;
@@ -234,22 +204,16 @@ body {
 #b-plat-1 {
   grid-area: 1/2/2/3;
   background-image: url(images/JUNK01.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #b-plat-2 {
   grid-area: 2/1/3/2;
   background-image: url(images/JUNK02.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #b-plat-3 {
   grid-area: 2/2/3/3;
   background-image: url(images/JUNK03.png);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 footer {
@@ -282,6 +246,18 @@ footer {
 }
 
 @media screen and (min-width: 1023px) {
+  #v-titre, #v-plat-1, #v-plat-2, #v-plat-3, #s-titre, #s-plat-1, #s-plat-2, #s-plat-3, #b-titre, #b-plat-1, #b-plat-2, #b-plat-3 {
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  #p-description .p1-gras, #p-description .p1-c, #p-description .p1-o, #p-description .p1-l, #p-description .p1-o2, #p-description .p1-r, #p-description .p1-é {
+    font-family: "Nerko One", cursive;
+    font-size: 150%;
+  }
+  #p-description .p3-simple, #p-description .p3-gras, #p-description .p3-excl {
+    font-family: "Nerko One", cursive;
+    font-size: 200%;
+  }
   #cartes {
     height: 30em;
     display: grid;
@@ -329,15 +305,15 @@ footer {
     margin-top: 37%;
   }
   #facebook:hover {
-    fill: rgb(255, 255, 255);
+    fill: white;
     cursor: pointer;
   }
   #insta:hover {
-    fill: rgb(255, 255, 255);
+    fill: white;
     cursor: pointer;
   }
   #twitter:hover {
-    fill: rgb(255, 255, 255);
+    fill: white;
     cursor: pointer;
   }
   footer {
@@ -353,7 +329,7 @@ footer {
     font-size: 1.5em;
   }
   #panier-header:hover {
-    fill: rgb(255, 255, 255);
+    fill: white;
     cursor: pointer;
     transform: translateY(-5px);
   }
@@ -370,33 +346,21 @@ footer {
     color: white;
   }
   #p-description .p1-c {
-    font-family: "Nerko One", cursive;
-    font-size: 150%;
     color: #fb7539;
   }
   #p-description .p1-o {
-    font-family: "Nerko One", cursive;
-    font-size: 150%;
     color: #c8e17c;
   }
   #p-description .p1-l {
-    font-family: "Nerko One", cursive;
-    font-size: 150%;
     color: #f68091;
   }
   #p-description .p1-o2 {
-    font-family: "Nerko One", cursive;
-    font-size: 150%;
     color: #c8e17c;
   }
   #p-description .p1-r {
-    font-family: "Nerko One", cursive;
-    font-size: 150%;
     color: #fb7539;
   }
   #p-description .p1-é {
-    font-family: "Nerko One", cursive;
-    font-size: 150%;
     color: #c8e17c;
   }
 }/*# sourceMappingURL=style.css.map */
