--- a/assets/style.scss
+++ b/assets/style.scss
@@ -7,12 +7,12 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    color:#302432 ;
+    color:$taupe ;
     margin:0;
     padding:0;
 }
 
-//--------------------------------------------------------------HEADER-------------------------------------------------------------------------------//
+//----------------------HEADER--------------------------------------------//
 
 #box-header{
     background-image: url(images/background.png);
@@ -25,8 +25,7 @@ body{
     justify-content: space-between;
 
 #logo-header{
-    height: 45px;
-    width: 45px;
+    @include wihe (45px,45px);
     border-radius: 50%;
     background-color: black;
     display: flex;
@@ -35,10 +34,9 @@ body{
 }
 
 #panier-header{
-    height: 2.5em;
-    width: 2.5em;
+    @include wihe (2.5em,2.5em);
     border-radius: 50%;
-    fill: rgb(72, 135, 177);
+    fill: $bleu;
     display: flex;
     justify-content: flex-end;
     margin: 2%;
@@ -47,8 +45,7 @@ body{
 
 #h1-header{
     text-align: center;
-    font-size: 250%;
-    font-family: 'Nerko One', cursive;
+    @include font('Nerko One', 250%);
     padding: 10vh 0vw 0vh;
     }
 }
@@ -63,90 +60,76 @@ body{
     letter-spacing: 50%;
 
 .p1-gras {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
+    @extend %fontsize;
 }
 
 .p1-c {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color:#fb7539;
+    @extend %fontsize;
+    color:$orange;
 }
 
 .p1-o {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color: rgb(72, 135, 177);
+    @extend %fontsize;
+    color: $bleu;
 }
 
 .p1-l {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color:#f68091;
+    @extend %fontsize;
+    color:$rose;
 }
 
 .p1-o2 {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color:rgb(72, 135, 177)
+    @extend %fontsize;
+    color:$bleu;
 }
 
 .p1-r {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color: #fb7539;
+    @extend %fontsize;
+    color: $orange;
 }
 
 .p1-é {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color: rgb(72, 135, 177);
+    @extend %fontsize;
+    color: $bleu;
 }
 
 .p3-simple {
-    font-family: 'Nerko One', cursive;
-    font-size: 200%;
+    @extend %fontsize02;
 }
 
 .p3-gras {
-    font-family: 'Nerko One', cursive;
-    font-size: 200%;
-    color:#f68091;
+    @extend %fontsize02;
+    color:$rose;
 }
 
 .p3-excl {
-    font-family: 'Nerko One', cursive;
-    font-size: 200%;
+    @extend %fontsize02;
 }
 }
 
 //--------------------------------------------------------------MAIN-------------------------------------------------------------------------------//
 
 #carte-végé{
-    width: 100%;
-    height:51%;
+    @include wihe (100%,51%);
     display:grid;
     margin-bottom: 2em;
 }
 
  #v-titre{
     position:absolute;
-    width: 50%;
-    height: 25.5%;
+    @include wihe (50%,25.5%);
     z-index: 1;
     grid-area: 1 / 1 / 2 / 2; 
-    background-color: #c8e17c;
+    background-color: $vert;
     background-image: url(images/backgroundblanc.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
 }    
 
 .végé-txt {
     position:absolute;
     z-index: 2;
     color: white;
-    font-family: 'Nerko One', cursive;
-    font-size: 350%;
+    @include font('Nerko One', 350%);
     text-transform: uppercase;
     margin-left: 1.2em;
     margin-top: 0.8em;
@@ -155,52 +138,46 @@ body{
  #v-plat-1{
     grid-area: 1 / 2 / 2 / 3; 
     background-image:url(images/VEGGIE01.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
  #v-plat-2{
     grid-area: 2 / 1 / 3 / 2;
     background-image:url(images/VEGGIE02.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
 #v-plat-3{
     grid-area: 2 / 2 / 3 / 3; 
     background-image:url(images/VEGGIE03.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
 //---------------------------------------------------------//
 
 #carte-sucré{
-    width: 100%;
-    height:51%;
+    @include wihe (100%,51%);
     display:grid;
     margin-bottom: 2em;
 }
 
  #s-titre{
     position:absolute;
-    width: 50%;
-    height: 25.5%;
+    @include wihe (50%,25.5%);
     z-index: 1;
     grid-area: 1 / 1 / 2 / 2; 
-    background-color:#f68091;
+    background-color:$rose;
     background-image: url(images/backgroundblanc.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
     color: white;
     font-family: 'Nerko One', cursive;
  }
+
  .sucré-txt {
     position:absolute;
     z-index: 2;
     color: white;
-    font-family: 'Nerko One', cursive;
-    font-size: 350%;
+    @include font('Nerko One', 350%);
     text-transform: uppercase;
     margin-left: 20%;
     margin-top: 0.8em;
@@ -209,42 +186,36 @@ body{
  #s-plat-1{
     grid-area: 1 / 2 / 2 / 3; 
     background-image:url(images/SUGAR01.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
  #s-plat-2{
     grid-area: 2 / 1 / 3 / 2;
     background-image:url(images/SUGAR02.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
 #s-plat-3{
     grid-area: 2 / 2 / 3 / 3; 
     background-image:url(images/SUGAR03.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
  //---------------------------------------------------------//
 
  #carte-bouffé{
-    width: 100%;
-    height:51%;
+    @include wihe (100%,51%);
     display:grid;
 }
 
  #b-titre{
     position:absolute;
-    width: 50%;
-    height: 25.5%;
+    @include wihe (50%,25.5%);
     z-index: 1;
     grid-area: 1 / 1 / 2 / 2; 
-    background-color: #fb7539;
+    background-color: $orange;
     background-image: url(images/backgroundblanc.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
     color: white;
     font-family: 'Nerko One', cursive;
  }
@@ -252,8 +223,7 @@ body{
     position:absolute;
     z-index: 2;
     color: white;
-    font-family: 'Nerko One', cursive;
-    font-size: 350%;
+    @include font('Nerko One', 350%);
     text-transform: uppercase;
     margin-left: 16%;
     margin-top: 0.8em;
@@ -262,31 +232,27 @@ body{
  #b-plat-1{
     grid-area: 1 / 2 / 2 / 3; 
     background-image:url(images/JUNK01.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
  #b-plat-2{
     grid-area: 2 / 1 / 3 / 2;
     background-image:url(images/JUNK02.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
 #b-plat-3{
     grid-area: 2 / 2 / 3 / 3; 
     background-image:url(images/JUNK03.png);
-    background-size:cover;
-    background-repeat: no-repeat;
+    @extend %back;
  }
 
 //-----------------------------------FOOTER------------------------------------------------//
 
 footer{
-    width: auto;
-    height: 15em;
+    @include wihe (auto,15em);
     background-size: cover;
-    background-color: rgb(72, 135, 177);
+    background-color:$bleu;
 }
 
 #p-footer{
@@ -300,7 +266,7 @@ footer{
     display: flex;
     justify-content: center;
     padding: 0em 0.5em 2em 0.5em;
-    fill: #302432;
+    fill: $taupe;
 }
 
 #insta{
@@ -349,20 +315,17 @@ footer{
 
 #s-titre{
     position:absolute;
-    width: 16.8%;
-    height: 15em;
+    @include wihe (16.8%,15em);
 }
 
 #v-titre{
     position:absolute;
-    width: 16.8%;
-    height: 15em;
+    @include wihe (16.8%,15em);
 }
 
 #b-titre{
     position:absolute;
-    width: 16.8%;
-    height: 15em;
+    @include wihe (16.8%,15em);
 }
 
 .sucré-txt {
@@ -378,20 +341,20 @@ footer{
     margin-top: 37%;
 }
 
-//-----------------------------ANIMATION FOOTER POUR MEDIA QUERIES---------------------------------------------//
+//-----------------------------ANIMATION POUR MEDIA QUERIES---------------------------------------------//
 
 #facebook:hover{
-    fill:rgb(255, 255, 255);
+    fill:white;
     cursor:pointer;
 }
 
 #insta:hover{
-    fill:rgb(255, 255, 255);
+    fill:white;
     cursor:pointer;
 }
 
 #twitter:hover{
-    fill:rgb(255, 255, 255);
+    fill:white;
     cursor:pointer;
 }
 
@@ -410,59 +373,46 @@ footer{
     font-size: 1.5em;
 }
 #panier-header:hover{
-    fill:rgb(255, 255, 255);
+    fill:white;
     cursor:pointer;
     transform: translateY(-5px);
 }
 
 }
 
-//--------------------------------------------------------------DARK MODE-------------------------------------------------------------------------------//
+//-------------------------------DARK MODE------------------------------------------------//
 
 @media (prefers-color-scheme: dark) {
 
 body{
     background-color:#302432  ;
-    
     color: white;
 }
 
 #box-header{
     background-image: url(images/backgrounddarkmode.png);
 }
+
 #p-description{
     color: white;
 
-
 .p1-c {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color:#fb7539;
+    color:$orange;
 }
 .p1-o {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color: #c8e17c;
+    color: $vert;
 }
 .p1-l {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color:#f68091;
+    color:$rose;
 }
 .p1-o2 {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color:#c8e17c;
+    color:$vert
 }
 .p1-r {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color: #fb7539;
+    color:$orange;
 }
 .p1-é {
-    font-family: 'Nerko One', cursive;
-    font-size: 150%;
-    color: #c8e17c;
+    color: $vert;
 }
 }
 }
