--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,6 @@
-@charset "UTF-8";
 #b-plat-3, #b-plat-2, #b-plat-1, #b-titre, #s-plat-3, #s-plat-2, #s-plat-1, #s-titre, #v-plat-3, #v-plat-2, #v-plat-1, #v-titre {
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-#p-description .p1-é, #p-description .p1-r, #p-description .p1-o2, #p-description .p1-l, #p-description .p1-o, #p-description .p1-c, #p-description .p1-gras {
-  font-family: "Nerko One", cursive;
-  font-size: 150%;
-}
-
-#p-description .p3-excl, #p-description .p3-gras, #p-description .p3-simple {
-  font-family: "Nerko One", cursive;
-  font-size: 200%;
 }
 
 body {
@@ -63,28 +52,55 @@ body {
   line-height: 150%;
   letter-spacing: 50%;
 }
+#p-description .p1-gras {
+  font-family: "Nerko One";
+  font-size: 150%;
+}
 #p-description .p1-c {
+  font-family: "Nerko One";
+  font-size: 150%;
   color: #fb7539;
 }
 #p-description .p1-o {
+  font-family: "Nerko One";
+  font-size: 150%;
   color: rgb(72, 135, 177);
 }
 #p-description .p1-l {
+  font-family: "Nerko One";
+  font-size: 150%;
   color: #f68091;
 }
 #p-description .p1-o2 {
+  font-family: "Nerko One";
+  font-size: 150%;
   color: rgb(72, 135, 177);
 }
 #p-description .p1-r {
+  font-family: "Nerko One";
+  font-size: 150%;
   color: #fb7539;
 }
-#p-description .p1-é {
+#p-description .p1-e {
+  font-family: "Nerko One";
+  font-size: 150%;
   color: rgb(72, 135, 177);
 }
+#p-description .p3-simple {
+  font-family: "Nerko One";
+  font-size: 200%;
+}
 #p-description .p3-gras {
+  font-family: "Nerko One";
+  font-size: 200%;
   color: #f68091;
 }
-#carte-végé {
+#p-description .p3-excl {
+  font-family: "Nerko One";
+  font-size: 200%;
+}
+
+#carte-vege {
   width: 100%;
   height: 51%;
   display: grid;
@@ -101,7 +117,7 @@ body {
   background-image: url(images/backgroundblanc.png);
 }
 
-.végé-txt {
+.vege-txt {
   position: absolute;
   z-index: 2;
   color: white;
@@ -127,7 +143,7 @@ body {
   background-image: url(images/VEGGIE03.png);
 }
 
-#carte-sucré {
+#carte-sucre {
   width: 100%;
   height: 51%;
   display: grid;
@@ -146,7 +162,7 @@ body {
   font-family: "Nerko One", cursive;
 }
 
-.sucré-txt {
+.sucre-txt {
   position: absolute;
   z-index: 2;
   color: white;
@@ -172,7 +188,7 @@ body {
   background-image: url(images/SUGAR03.png);
 }
 
-#carte-bouffé {
+#carte-bouffe {
   width: 100%;
   height: 51%;
   display: grid;
@@ -190,7 +206,7 @@ body {
   font-family: "Nerko One", cursive;
 }
 
-.bouffé-txt {
+.bouffe-txt {
   position: absolute;
   z-index: 2;
   color: white;
@@ -250,31 +266,23 @@ footer {
     background-size: cover;
     background-repeat: no-repeat;
   }
-  #p-description .p1-gras, #p-description .p1-c, #p-description .p1-o, #p-description .p1-l, #p-description .p1-o2, #p-description .p1-r, #p-description .p1-é {
-    font-family: "Nerko One", cursive;
-    font-size: 150%;
-  }
-  #p-description .p3-simple, #p-description .p3-gras, #p-description .p3-excl {
-    font-family: "Nerko One", cursive;
-    font-size: 200%;
-  }
   #cartes {
     height: 30em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
-  #carte-végé {
+  #carte-vege {
     height: 30em;
     grid-area: 2/1/3/2;
     background-size: cover;
   }
-  #carte-sucré {
+  #carte-sucre {
     height: 30em;
     background-size: cover;
     grid-area: 2/2/3/3;
   }
-  #carte-bouffé {
+  #carte-bouffe {
     height: 30em;
     background-size: cover;
     grid-area: 2/3/3/4;
@@ -294,14 +302,14 @@ footer {
     width: 16.8%;
     height: 15em;
   }
-  .sucré-txt {
+  .sucre-txt {
     margin-top: 37%;
   }
-  .végé-txt {
+  .vege-txt {
     margin-top: 37%;
     margin-left: 25%;
   }
-  .bouffé-txt {
+  .bouffe-txt {
     margin-top: 37%;
   }
   #facebook:hover {
@@ -360,7 +368,7 @@ footer {
   #p-description .p1-r {
     color: #fb7539;
   }
-  #p-description .p1-é {
+  #p-description .p1-e {
     color: #c8e17c;
   }
 }/*# sourceMappingURL=style.css.map */
